template/style.css
.wrap { 
    padding: 25px; 
    text-align: center; 
    box-shadow: 0 4px 25px -4px #9da5ab; 
}
article { 
    padding: 25px 0; 
    line-height: 150%; 
    text-align: left; 
}

nav .item {
    text-decoration: none;
}
nav .active {
    border-bottom: 1px solid;   
}

@media only screen and (min-width: 768px) {
    article { 
        padding: 40px; 
    }
    .wrap { 
        max-width: 750px; 
        margin: 50px auto;
        padding: 30px 40px;
    }
}
    

